--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+arrange/src/test/
+arrange/target/generated-sources/
+datax/target/generated-sources/
+datax/target/generated-test-sources/
