--- a/arrange/src/main/resources/application-n1.yml
+++ b/arrange/src/main/resources/application-n1.yml
@@ -5,7 +5,7 @@ eureka:
     hostname: eureka1
   client:
     service-url:
-      defaultZone: http://euraka2:8672/eureka/,http://euraka3:8673/eureka/
+      defaultZone: http://eureka2:8672/eureka/,http://eureka3:8673/eureka/
 server:
   port: 8671
 
