--- a/arrange/src/main/resources/application-n2.yml
+++ b/arrange/src/main/resources/application-n2.yml
@@ -5,7 +5,7 @@ eureka:
     hostname: eureka2
   client:
     service-url:
-      defaultZone: http://euraka1:8671/eureka/,http://euraka3:8673/eureka/
+      defaultZone: http://eureka1:8671/eureka/,http://eureka3:8673/eureka/
 server:
   port: 8672
 
