--- a/arrange/src/main/resources/application-n3.yml
+++ b/arrange/src/main/resources/application-n3.yml
@@ -5,7 +5,7 @@ eureka:
     hostname: eureka3
   client:
     service-url:
-      defaultZone: http://euraka1:8671/eureka/,http://euraka2:8672/eureka/
+      defaultZone: http://eureka1:8671/eureka/,http://eureka2:8672/eureka/
 server:
   port: 8673
 
