--- a/datax/pom.xml
+++ b/datax/pom.xml
@@ -54,5 +54,13 @@
             <artifactId>commons-cli</artifactId>
             <version>${commons-cli-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 </project>
