增加security token登陆认证

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <commons-io-version>2.4</commons-io-version>
         <commons-cli-version>1.2</commons-cli-version>
         <junit-version>4.12</junit-version>
+        <jjwt-version>0.9.0</jjwt-version>
         <java.version>1.8</java.version>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
