--- a/cloudin-ui/package.json
+++ b/cloudin-ui/package.json
@@ -8,17 +8,31 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design-vue/pro-layout": "^0.3.2",
+    "ant-design-vue": "^1.7.5",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "lodash.get": "^4.4.2",
+    "lodash.pick": "^4.4.0",
+    "mockjs2": "1.0.8",
+    "nprogress": "^0.2.0",
+    "store": "^2.0.12",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack-theme-color-replacer": "^1.3.12"
   },
   "eslintConfig": {
     "root": true,
