--- a/cloudin-ui/package.json
+++ b/cloudin-ui/package.json
@@ -18,6 +18,7 @@
     "nprogress": "^0.2.0",
     "store": "^2.0.12",
     "vue": "^2.6.11",
+    "vue-json-viewer": "^2.2.19",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
