--- a/arrange/pom.xml
+++ b/arrange/pom.xml
@@ -44,5 +44,10 @@
             <artifactId>jjwt</artifactId>
             <version>${jjwt-version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.alipay.sofa</groupId>
+            <artifactId>jraft-core</artifactId>
+            <version>1.3.7</version>
+        </dependency>
     </dependencies>
 </project>
