--- a/arrange/src/main/resources/application-n1.yml
+++ b/arrange/src/main/resources/application-n1.yml
@@ -8,6 +8,11 @@ eureka:
       defaultZone: http://eureka2:8672/eureka/,http://eureka3:8673/eureka/
 server:
   port: 8671
+election:
+  dataPath: /Users/chengyajie/data/n1
+  groupId: cloudin_arrange
+  serverIdStr: 127.0.0.1:9671
+  initialConfStr: 127.0.0.1:9671,127.0.0.1:9672,127.0.0.1:9673
 
 
 
