--- a/arrange/src/main/resources/application-n2.yml
+++ b/arrange/src/main/resources/application-n2.yml
@@ -8,6 +8,10 @@ eureka:
       defaultZone: http://eureka1:8671/eureka/,http://eureka3:8673/eureka/
 server:
   port: 8672
-
+election:
+  dataPath: /Users/chengyajie/data/n2
+  groupId: cloudin_arrange
+  serverIdStr: 127.0.0.1:9672
+  initialConfStr: 127.0.0.1:9671,127.0.0.1:9672,127.0.0.1:9673
 
 
