--- a/arrange/src/main/resources/application-n3.yml
+++ b/arrange/src/main/resources/application-n3.yml
@@ -8,6 +8,11 @@ eureka:
       defaultZone: http://eureka1:8671/eureka/,http://eureka2:8672/eureka/
 server:
   port: 8673
+election:
+  dataPath: /Users/chengyajie/data/n3
+  groupId: cloudin_arrange
+  serverIdStr: 127.0.0.1:9673
+  initialConfStr: 127.0.0.1:9671,127.0.0.1:9672,127.0.0.1:9673
 
 
 
