--- a/arrange/src/main/resources/application.yml
+++ b/arrange/src/main/resources/application.yml
@@ -3,3 +3,8 @@ spring:
       name: eureka-server
   profiles:
     active: dev
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/datax?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
+    username: root
+    password: DATAX#Arrange#2021
