--- a/arrange/pom.xml
+++ b/arrange/pom.xml
@@ -49,5 +49,15 @@
             <artifactId>jraft-core</artifactId>
             <version>1.3.7</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus-version}</version>
+        </dependency>
     </dependencies>
 </project>
