--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
         <commons-cli-version>1.2</commons-cli-version>
         <junit-version>4.12</junit-version>
         <jjwt-version>0.9.0</jjwt-version>
+        <postgresql-version>42.2.22</postgresql-version>
+        <mysql-version>8.0.23</mysql-version>
+        <mybatis-plus-version>3.4.3.1</mybatis-plus-version>
         <java.version>1.8</java.version>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
