--- a/arrange/src/main/resources/application.yml
+++ b/arrange/src/main/resources/application.yml
@@ -8,3 +8,6 @@ spring:
     url: jdbc:mysql://localhost:3306/cloudin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: DATAX#Arrange#2021
+eureka:
+  client:
+    enabled: false
