--- a/arrange/pom.xml
+++ b/arrange/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>com.alipay.sofa</groupId>
             <artifactId>jraft-core</artifactId>
-            <version>1.3.7</version>
+            <version>${jraft-version}</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
