--- a/datax/src/main/resources/application-n1.yml
+++ b/datax/src/main/resources/application-n1.yml
@@ -5,3 +5,11 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://eureka1:8671/eureka/,http://eureka2:8672/eureka/,http://eureka3:8673/eureka/
+rheakv:
+  instance:
+    port: 10002
+    dbPath: rhea_db/
+    dataPath: raft_data/
+  cluster:
+    name: cloudin-executor
+    nodes: 127.0.0.1:10002,127.0.0.1:10003
