--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,20 @@
         <postgresql-version>42.2.19</postgresql-version>
         <mybatis-plus-version>3.4.3.1</mybatis-plus-version>
         <druid-version>1.0.15</druid-version>
+        <jraft-version>1.3.7</jraft-version>
         <java.version>1.8</java.version>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+    <repositories>
+        <repository>
+            <id>alimaven</id>
+            <name>aliyun maven</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
     <dependencyManagement>
         <dependencies>
             <dependency>
