新增datax任务跑单任务

--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,5 @@ datax/target/*
 arrange/target/*
 cloudin-ui/node_modules
 arrange/src/main/java/generator
+datax/src/main/java/generator
 election.dataPath/
