--- a/datax/src/main/resources/application.yml
+++ b/datax/src/main/resources/application.yml
@@ -3,6 +3,11 @@ spring:
       name: server-datax
   profiles:
     active: dev
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/cloudin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+    username: root
+    password: DATAX#Arrange#2021
 eureka:
   client:
     enabled: false
