数据执行通过 待跑量测试  暂做单arrange 三datax测试

--- a/datax/src/main/resources/application-n2.yml
+++ b/datax/src/main/resources/application-n2.yml
@@ -4,7 +4,8 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://eureka1:8671/eureka/,http://eureka2:8672/eureka/,http://eureka3:8673/eureka/
+#      defaultZone: http://eureka1:8671/eureka/,http://eureka2:8672/eureka/,http://eureka3:8673/eureka/
+      defaultZone: http://localhost:8761/eureka/
 rheakv:
   instance:
     port: 10003
