--- a/datax/src/main/resources/application.yml
+++ b/datax/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
       name: server-datax
   profiles:
-    active: dev
+    active: n2
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/cloudin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
