容器化 arrange模块

--- a/datax/pom.xml
+++ b/datax/pom.xml
@@ -188,4 +188,17 @@
             <version>3.3</version>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>datax</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.cyj.datax.Application</mainClass>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
