--- a/arrange/pom.xml
+++ b/arrange/pom.xml
@@ -71,4 +71,17 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>dataarrange</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.cyj.arrange.Application</mainClass>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
