增加actuator 增加任务线程池监控埋点

--- a/datax/pom.xml
+++ b/datax/pom.xml
@@ -187,6 +187,10 @@
             <artifactId>commons-net</artifactId>
             <version>3.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>datax</finalName>
