--- a/datax/src/main/resources/application.yml
+++ b/datax/src/main/resources/application.yml
@@ -13,3 +13,11 @@ eureka:
     enabled: true
 pipeline:
   status: false
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: always
