用resttemplate调用每个注册服务调通

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-data_path=E:/data
-docker_host_ip=192.168.3.10
-mysql_host=192.168.3.10:3306
+data_path=/Users/chengyajie/data
+docker_host_ip=192.168.221.70
+mysql_host=192.168.221.70:3306
 profiles=docker
