修改流水线任务执行策略 从datax服务回调到arrange减少复杂度

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-data_path=/Users/chengyajie/data
-docker_host_ip=192.168.221.70
-mysql_host=192.168.221.70:3306
+data_path=E:/data
+mysql_host=192.168.3.10:3306
+eureka_server=http://eureka-service1:8671/eureka/,http://eureka-service2:8671/eureka/
 profiles=docker
