--- a/arrange/src/main/resources/application-dev.yml
+++ b/arrange/src/main/resources/application-dev.yml
@@ -1,12 +1,9 @@
 server:
-  port: 8761
+  port: 8801
 eureka:
-  instance:
-    hostname: localhost
   client:
-    registerWithEureka: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://localhost:8761/eureka/
 election:
   dataPath: /Users/chengyajie/data/dev
   groupId: cloudin_arrange
