--- a/eureka/src/main/resources/application-dev.yml
+++ b/eureka/src/main/resources/application-dev.yml
@@ -7,3 +7,4 @@ eureka:
     registerWithEureka: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    fetch-registry: false
